--- a/_episodesShort/6short_05-data-structures-part2.Rmd
+++ b/_episodesShort/6short_05-data-structures-part2.Rmd
@@ -24,7 +24,7 @@ source: Rmd
 ---
 
 ```{r, include=FALSE}
-source("../bin/chunk-options.R")
+source("../bin/chunk-options-short.R")
 knitr_fig_path("05-")
 ```
 
@@ -201,91 +201,49 @@ now let's use those skills to digest a more realistic dataset. Let's read in the
 `gapminder` dataset that we downloaded previously:
 
 ```{r}
-gapminder <- read.csv("data/gapminder_data.csv")
+#"https://raw.githubusercontent.com/theavanrossum/r-novice-gapminder/gh-pages/data/gapminder_data.csv"
+download.file(url = "https://bit.ly/2xIXR2B" ,
+              destfile = "../data/gapminder_data.csv")
+
+gapminder <- read.csv("../data/gapminder_data.csv")
 ```
 
-> ## Miscellaneous Tips
->
-> * Another type of file you might encounter are tab-separated value files (.tsv). To specify a tab as a separator, use `"\\t"` or `read.delim()`.
->
-> * Files can also be downloaded directly from the Internet into a local
-> folder of your choice onto your computer using the `download.file` function.
-> The `read.csv` function can then be executed to read the downloaded file from the download location, for example,
-> ```{r eval=FALSE, echo=TRUE}
-> download.file("https://raw.githubusercontent.com/swcarpentry/r-novice-gapminder/gh-pages/_episodes_rmd/data/gapminder_data.csv", destfile = "data/gapminder_data.csv")
-> gapminder <- read.csv("data/gapminder_data.csv")
-> ```
->
-> * Alternatively, you can also read in files directly into R from the Internet by replacing the file paths with a web address in `read.csv`. One should note that in doing this no local copy of the csv file is first saved onto your computer. For example,
-> ```{r eval=FALSE, echo=TRUE}
-> gapminder <- read.csv("https://raw.githubusercontent.com/swcarpentry/r-novice-gapminder/gh-pages/_episodes_rmd/data/gapminder_data.csv")
-> ```
->
-> * You can read directly from excel spreadsheets without
-> converting them to plain text first by using the [readxl](https://cran.r-project.org/web/packages/readxl/index.html) package.
-{: .callout}
+readxl (https://cran.r-project.org/web/packages/readxl/index.html) package.
 
-Let's investigate gapminder a bit; the first thing we should always do is check
-out what the data looks like with `str`:
+
+investigate gapminder
 
 ```{r}
 str(gapminder)
-```
 
-We can also examine individual columns of the data frame with our `typeof` function:
-
-```{r}
 typeof(gapminder$year)
 typeof(gapminder$country)
 str(gapminder$country)
 ```
 
-We can also interrogate the data frame for information about its dimensions;
-remembering that `str(gapminder)` said there were 1704 observations of 6
-variables in gapminder, what do you think the following will produce, and why?
+what do you think the following will produce, and why?
 
 ```{r}
 length(gapminder)
 ```
 
-A fair guess would have been to say that the length of a data frame would be the
-number of rows it has (1704), but this is not the case; remember, a data frame
-is a *list of vectors and factors*:
+*df is a list*
 
 ```{r}
 typeof(gapminder)
 ```
 
-When `length` gave us 6, it's because gapminder is built out of a list of 6
-columns. To get the number of rows and columns in our dataset, try:
-
 ```{r}
 nrow(gapminder)
 ncol(gapminder)
-```
-
-Or, both at once:
-
-```{r}
 dim(gapminder)
 ```
-
-We'll also likely want to know what the titles of all the columns are, so we can
-ask for them later:
 
 ```{r}
 colnames(gapminder)
 ```
 
-At this stage, it's important to ask ourselves if the structure R is reporting
-matches our intuition or expectations; do the basic data types reported for each
-column make sense? If not, we need to sort any problems out now before they turn
-into bad surprises down the road, using what we've learned about how R
-interprets data, and the importance of *strict consistency* in how we record our
-data.
-
-Once we're happy that the data types and structures seem reasonable, it's time
-to start digging into our data proper. Check out the first few lines:
+data types ok?
 
 ```{r}
 head(gapminder)
@@ -295,7 +253,7 @@ head(gapminder)
 >
 > It's good practice to also check the last few lines of your data and some in the middle. How would you do this?
 >
-> Searching for ones specifically in the middle isn't too hard but we could simply ask for a few lines at random. How would you code this?
+> Searching for ones specifically in the middle isn't too hard or we could simply ask for a few lines at random. How would you code this? (hint: check out the sample() or runif() functions using ?sample )
 >
 > > ## Solution to Challenge 3
 > > To check the last few lines it's relatively simple as R already has a function for this:
@@ -317,31 +275,6 @@ head(gapminder)
 > {: .solution}
 {: .challenge}
 
-
-To make sure our analysis is reproducible, we should put the code
-into a script file so we can come back to it later.
-
-> ## Challenge 4
->
-> Go to file -> new file -> R script, and write an R script
-> to load in the gapminder dataset. Put it in the `scripts/`
-> directory and add it to version control.
->
-> Run the script using the `source` function, using the file path
-> as its argument (or by pressing the "source" button in RStudio).
->
-> > ## Solution to Challenge 4
-> > The contents of `scripts/load-gapminder.R`:
-> > ```{r eval = FALSE}
-> > download.file("https://raw.githubusercontent.com/swcarpentry/r-novice-gapminder/gh-pages/_episodes_rmd/data/gapminder_data.csv", destfile = "data/gapminder_data.csv")
-> > gapminder <- read.csv(file = "data/gapminder_data.csv")
-> > ```
-> > To run the script and load the data into the `gapminder` variable:
-> > ```{r eval = FALSE}
-> > source(file = "scripts/load-gapminder.R")
-> > ```
-> {: .solution}
-{: .challenge}
 
 > ## Challenge 5
 >
