--- a/_episodesShort/7short_13-dplyr.Rmd
+++ b/_episodesShort/7short_13-dplyr.Rmd
@@ -18,90 +18,36 @@ source: Rmd
 ---
 
 ```{r, include=FALSE}
-source("../bin/chunk-options.R")
+source("../bin/chunk-options-short.R")
 knitr_fig_path("13-")
 # Silently load in the data so the rest of the lesson works
-gapminder <- read.csv("data/gapminder_data.csv", header=TRUE)
+gapminder <- read.csv("../data/gapminder_data.csv", header=TRUE)
 ```
-
-Manipulation of dataframes means many things to many researchers, we often
-select certain observations (rows) or variables (columns), we often group the
-data by a certain variable(s), or we even calculate summary statistics. We can
-do these operations using the normal base R operations:
-
-```{r}
-mean(gapminder[gapminder$continent == "Africa", "gdpPercap"])
-mean(gapminder[gapminder$continent == "Americas", "gdpPercap"])
-mean(gapminder[gapminder$continent == "Asia", "gdpPercap"])
-```
-
-But this isn't very *nice* because there is a fair bit of repetition. Repeating
-yourself will cost you time, both now and later, and potentially introduce some
-nasty bugs.
 
 ## The `dplyr` package
 
-Luckily, the [`dplyr`](https://cran.r-project.org/web/packages/dplyr/dplyr.pdf)
-package provides a number of very useful functions for manipulating dataframes
-in a way that will reduce the above repetition, reduce the probability of making
-errors, and probably even save you some typing. As an added bonus, you might
-even find the `dplyr` grammar easier to read.
-
-Here we're going to cover 6 of the most commonly used functions as well as using
-pipes (`%>%`) to combine them.
-
-1. `select()`
-2. `filter()`
-3. `group_by()`
-4. `summarize()`
-5. `mutate()`
-
-If you have have not installed this package earlier, please do so:
+best package to work with data frames
 
 ```{r,eval=FALSE}
-install.packages('dplyr')
-```
+install.packages('dplyr') #install
 
-Now let's load the package:
-
-```{r,message=FALSE}
-library("dplyr")
+library("dplyr") # load the package
 ```
 
 ## Using select()
 
-If, for example, we wanted to move forward with only a few of the variables in
-our dataframe we could use the `select()` function. This will keep only the
-variables you select.
-
 ```{r}
 year_country_gdp <- select(gapminder,year,country,gdpPercap)
+head(year_country_gdp)
 ```
 
-![](../fig/13-dplyr-fig1.png)
-
-If we open up `year_country_gdp` we'll see that it only contains the year,
-country and gdpPercap. Above we used 'normal' grammar, but the strengths of
-`dplyr` lie in combining several functions using pipes. Since the pipes grammar
-is unlike anything we've seen in R before, let's repeat what we've done above
-using pipes.
+pipes to combine
 
 ```{r}
 year_country_gdp <- gapminder %>% select(year,country,gdpPercap)
 ```
 
-To help you understand why we wrote that in that way, let's walk through it step
-by step. First we summon the gapminder dataframe and pass it on, using the pipe
-symbol `%>%`, to the next step, which is the `select()` function. In this case
-we don't specify which data object we use in the `select()` function since in
-gets that from the previous pipe. **Fun Fact**: There is a good chance you have
-encountered pipes before in the shell. In R, a pipe symbol is `%>%` while in the
-shell it is `|` but the concept is the same!
-
 ## Using filter()
-
-If we now wanted to move forward with the above, but only with European
-countries, we can combine `select` and `filter`
 
 ```{r}
 year_country_gdp_euro <- gapminder %>%
@@ -125,63 +71,30 @@ year_country_gdp_euro <- gapminder %>%
 > {: .solution}
 {: .challenge}
 
-As with last time, first we pass the gapminder dataframe to the `filter()`
-function, then we pass the filtered version of the gapminder dataframe to the
-`select()` function. **Note:** The order of operations is very important in this
-case. If we used 'select' first, filter would not be able to find the variable
-continent since we would have removed it in the previous step.
 
 ## Using group_by() and summarize()
-
-Now, we were supposed to be reducing the error prone repetitiveness of what can
-be done with base R, but up to now we haven't done that since we would have to
-repeat the above for each continent. Instead of `filter()`, which will only pass
-observations that meet your criteria (in the above: `continent=="Europe"`), we
-can use `group_by()`, which will essentially use every unique criteria that you
-could have used in filter.
 
 ```{r}
 str(gapminder)
 
 str(gapminder %>% group_by(continent))
 ```
-You will notice that the structure of the dataframe where we used `group_by()`
-(`grouped_df`) is not the same as the original `gapminder` (`data.frame`). A
-`grouped_df` can be thought of as a `list` where each item in the `list`is a
-`data.frame` which contains only the rows that correspond to the a particular
-value `continent` (at least in the example above).
+
+list of dfs
 
 ![](../fig/13-dplyr-fig2.png)
 
 ## Using summarize()
 
-The above was a bit on the uneventful side but `group_by()` is much more
-exciting in conjunction with `summarize()`. This will allow us to create new
-variable(s) by using functions that repeat for each of the continent-specific
-data frames. That is to say, using the `group_by()` function, we split our
-original dataframe into multiple pieces, then we can run functions
-(e.g. `mean()` or `sd()`) within `summarize()`.
-
 ```{r}
 gdp_bycontinents <- gapminder %>%
     group_by(continent) %>%
     summarize(mean_gdpPercap=mean(gdpPercap))
+gdp_bycontinents
 ```
 
 ![](../fig/13-dplyr-fig3.png)
 
-```{r,eval=FALSE}
-continent mean_gdpPercap
-     <fctr>          <dbl>
-1    Africa       2193.755
-2  Americas       7136.110
-3      Asia       7902.150
-4    Europe      14469.476
-5   Oceania      18621.609
-```
-
-That allowed us to calculate the mean gdpPercap for each continent, but it gets
-even better.
 
 > ## Challenge 2
 >
@@ -213,8 +126,9 @@ even better.
 > {: .solution}
 {: .challenge}
 
-The function `group_by()` allows us to group by multiple variables. Let's group by `year` and `continent`.
 
+
+group by multiple
 
 ```{r}
 gdp_bycontinents_byyear <- gapminder %>%
@@ -222,7 +136,7 @@ gdp_bycontinents_byyear <- gapminder %>%
     summarize(mean_gdpPercap=mean(gdpPercap))
 ```
 
-That is already quite powerful, but it gets even better! You're not limited to defining 1 new variable in `summarize()`.
+summarise as multiple
 
 ```{r}
 gdp_pop_bycontinents_byyear <- gapminder %>%
@@ -235,13 +149,7 @@ gdp_pop_bycontinents_byyear <- gapminder %>%
 
 ## count() and n()
 
-A very common operation is to count the number of observations for each
-group. The `dplyr` package comes with two related functions that help with this.
-
-For instance, if we wanted to check the number of countries included in the
-dataset for the year 2002, we can use the `count()` function. It takes the name
-of one or more columns that contain the groups we are interested in, and we can
-optionally sort the results in descending order by adding `sort=TRUE`:
+count the number of observations for each group
 
 ```{r}
 gapminder %>%
@@ -316,54 +224,7 @@ gdp_future_bycontinents_byyear_high_lifeExp <- gapminder %>%
               mean_gdpPercap_expected = mean(gdp_futureExpectation))
 ```
 
-## Combining `dplyr` and `ggplot2`
 
-In the plotting lesson we looked at how to make a multi-panel figure by adding
-a layer of facet panels using `ggplot2`. Here is the code we used (with some
-extra comments):
-
-```{r}
-# Get the start letter of each country
-starts.with <- substr(gapminder$country, start = 1, stop = 1)
-# Filter countries that start with "A" or "Z"
-az.countries <- gapminder[starts.with %in% c("A", "Z"), ]
-# Make the plot
-ggplot(data = az.countries, aes(x = year, y = lifeExp, color = continent)) +
-  geom_line() + facet_wrap( ~ country)
-```
-
-This code makes the right plot but it also creates some variables (`starts.with`
-and `az.countries`) that we might not have any other uses for. Just as we used
-`%>%` to pipe data along a chain of `dplyr` functions we can use it to pass data
-to `ggplot()`. Because `%>%` replaces the first argument in a function we don't
-need to specify the `data =` argument in the `ggplot()` function. By combining
-`dplyr` and `ggplot2` functions we can make the same figure without creating any
-new variables or modifying the data.
-
-```{r}
-gapminder %>%
-   # Get the start letter of each country
-   mutate(startsWith = substr(country, start = 1, stop = 1)) %>%
-   # Filter countries that start with "A" or "Z"
-   filter(startsWith %in% c("A", "Z")) %>%
-   # Make the plot
-   ggplot(aes(x = year, y = lifeExp, color = continent)) +
-   geom_line() +
-   facet_wrap( ~ country)
-```
-
-Using `dplyr` functions also helps us simplify things, for example we could
-combine the first two steps:
-
-```{r}
-gapminder %>%
-    # Filter countries that start with "A" or "Z"
-	filter(substr(country, start = 1, stop = 1) %in% c("A", "Z")) %>%
-	# Make the plot
-	ggplot(aes(x = year, y = lifeExp, color = continent)) +
-	geom_line() +
-	facet_wrap( ~ country)
-```
 
 > ## Advanced Challenge
 >
