--- a/_episodesShort/8short_08-plot-ggplot2.Rmd
+++ b/_episodesShort/8short_08-plot-ggplot2.Rmd
@@ -17,10 +17,10 @@ source: Rmd
 ---
 
 ```{r, include=FALSE}
-source("../bin/chunk-options.R")
+source("../bin/chunk-options-short.R")
 knitr_fig_path("08-")
 # Silently load in the data so the rest of the lesson works
-gapminder <- read.csv("data/gapminder_data.csv", header = TRUE)
+gapminder <- read.csv("../data/gapminder_data.csv", header = TRUE)
 ```
 
 Plotting our data is one of the best ways to
@@ -326,6 +326,55 @@ ggplot(data = az.countries, aes(x = year, y = lifeExp, color=continent)) +
 The `facet_wrap` layer took a "formula" as its argument, denoted by the tilde
 (~). This tells R to draw a panel for each unique value in the country column
 of the gapminder dataset.
+
+## Combining `dplyr` and `ggplot2`
+
+In the plotting lesson we looked at how to make a multi-panel figure by adding
+a layer of facet panels using `ggplot2`. Here is the code we used (with some
+extra comments):
+
+```{r}
+# Get the start letter of each country
+starts.with <- substr(gapminder$country, start = 1, stop = 1)
+# Filter countries that start with "A" or "Z"
+az.countries <- gapminder[starts.with %in% c("A", "Z"), ]
+# Make the plot
+ggplot(data = az.countries, aes(x = year, y = lifeExp, color = continent)) +
+  geom_line() + facet_wrap( ~ country)
+```
+
+This code makes the right plot but it also creates some variables (`starts.with`
+and `az.countries`) that we might not have any other uses for. Just as we used
+`%>%` to pipe data along a chain of `dplyr` functions we can use it to pass data
+to `ggplot()`. Because `%>%` replaces the first argument in a function we don't
+need to specify the `data =` argument in the `ggplot()` function. By combining
+`dplyr` and `ggplot2` functions we can make the same figure without creating any
+new variables or modifying the data.
+
+```{r}
+gapminder %>%
+   # Get the start letter of each country
+   mutate(startsWith = substr(country, start = 1, stop = 1)) %>%
+   # Filter countries that start with "A" or "Z"
+   filter(startsWith %in% c("A", "Z")) %>%
+   # Make the plot
+   ggplot(aes(x = year, y = lifeExp, color = continent)) +
+   geom_line() +
+   facet_wrap( ~ country)
+```
+
+Using `dplyr` functions also helps us simplify things, for example we could
+combine the first two steps:
+
+```{r}
+gapminder %>%
+    # Filter countries that start with "A" or "Z"
+	filter(substr(country, start = 1, stop = 1) %in% c("A", "Z")) %>%
+	# Make the plot
+	ggplot(aes(x = year, y = lifeExp, color = continent)) +
+	geom_line() +
+	facet_wrap( ~ country)
+```
 
 ## Modifying text
 
